[package]
name = "elk-bledom-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.8", features = ["serde"] }
chrono = "0.4.41"
log = "0.4.22"
thiserror = "2.0.15"
tokio = { version = "1", features = ["full"] }
uuid = "1.10.0"

[dev-dependencies]
env_logger = "*"